# cdd-data

./: .gitignore  Dicc.csv  Dockerfile  README.md  app.py  cdd_info.py  competencias.csv  components.py  data.csv  data.py  dev.ipynb  docker-compose.yml  local.yml  prepare_csv.py  pyproject.toml  requirements.txt  test.py  utils.py
assets/: basic.css
assets/videos/: curso.mkv
